--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <div class="container">
 
     <div class="top_img">
-      <img src="/images/bg-pattern-top.svg" alt="bg-top">
+      <img src="images/bg-pattern-top.svg" alt="bg-top">
     </div>
     <div class="bottom_img">
-      <img src="/images/bg-pattern-bottom.svg" alt="bg-bottom">
+      <img src="images/bg-pattern-bottom.svg" alt="bg-bottom">
     </div>
 
     <div class="card">
@@ -28,7 +28,7 @@
 
       </div>
       <div class="card__image">
-        <img src="/images/image-victor.jpg">
+        <img src="images/image-victor.jpg">
       </div>
       <div class="card__name">
         <div class="name">
