using grid instead of flex for stats

--- a/index.html
+++ b/index.html
@@ -30,36 +30,47 @@
       <div class="card__image">
         <img src="images/image-victor.jpg">
       </div>
-      <div class="card__name">
-        <div class="name">
-          Victor Crest
+      <div class="card__middle">
+        <div class="card__name">
+          <div class="name">
+            Victor Crest
+          </div>
+          <div class="age">
+            26
+          </div>
         </div>
-        <div class="age">
-          26
+        <div class="card__city">
+          London
         </div>
+        <hr>
       </div>
-      <div class="card__city">
-        London
-      </div>
-      <hr>
+
       <div class="card__stats">
-        <div class="stat__item">
-          <div class="stat__number">80K</div>
+        <div class="stat__item stat__item--followers">
+          <div class="stat__number ">80K</div>
           <div class="stat__name">Followers</div>
-
         </div>
-        <div class="stat__item">
-          <div class="stat__number">803K</div>
+        <div class="stat__item center__item stat__item--followers">
+          <div class="stat__number ">803K</div>
           <div class="stat__name">Likes</div>
-
         </div>
-        <div class="stat__item">
+        <div class="stat__item stat__item--photos">
           <div class="stat__number">1.4K</div>
           <div class="stat__name">Photos</div>
-
         </div>
 
       </div>
+      <!-- <div class="card__stats__names">
+        <div class="stat__item">
+          <div class="stat__name">Followers</div>
+        </div>
+        <div class="stat__item">
+          <div class="stat__name">Likes</div>
+        </div>
+        <div class="stat__item">
+          <div class="stat__name">Photos</div>
+        </div>
+      </div> -->
     </div>
     
     <!-- background images -->
