--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       </div>
       <div class="card__image">
-        <img src="images/image-victor.jpg">
+        <img src="images/image-victor.jpg" alt="victor">
       </div>
       <div class="card__middle">
         <div class="card__name">
